# Whayer_A200_Api

./: CMakeLists.txt  README.md
Include/: atlas_dll.h  hy_detect.h  yolo_v3_com.h
common/: .sample_comm_npu.o.d  sample_comm_npu.c  sample_comm_npu.h  sample_comm_svp.h
hy_A200_demo/: CMakeLists.txt  demo.cpp
hy_A200_demo/include/: atlas_arm64_lib.h  atlas_dll.h  yolo_v3_com.h
include/: autoconf.h  mpi_isp.h  mpi_ive.h  mpi_sys.h  mpi_venc.h  mpi_vgs.h  sc_buffer.h  sc_comm_isp.h  sc_comm_ive.h  sc_comm_sns.h  sc_comm_vdec.h  sc_comm_venc.h  sc_comm_vgs.h  sc_comm_vi.h  sc_common.h  sc_debug.h  sc_defines.h  sc_isp_tuning_def.h  sc_isp_type_def.h  sc_mipi.h
sample/: .sample_npu.o.d  sample_npu.c  sample_npu_main.h
sample_npu_software/: .sample_svp_npu_software.o.d  sample_svp_npu_software.c  sample_svp_npu_software.h  yolov3.cpp  yolov3.h
src/: atlas_dll.cpp  hy_detect.cpp
